# dagster-datafusion-example

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  setup_localstack.sh  workspace.yaml
dagster_pipeline/: __init__.py  io_managers.py  repository.py
dagster_pipeline/assets/: __init__.py  ecommerce.py  healthcare.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  TROUBLESHOOTING.md  openapi.yaml
examples/: benchmark.py  curl_examples.sh  query_examples.py  sample_queries.sql
tests/: test_basic.py
