[project]
name = "dagster-datafusion-example"
version = "0.1.0"
description = "Example integration of Dagster with DataFusion for high-performance Parquet queries"
authors = [
    {name = "Horizon Analytic", email = "info@horizonanalytic.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "dagster>=1.8.12",
    "dagster-webserver>=1.8.12",
    "dagster-postgres>=0.24.12",
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
    "boto3>=1.35.64",
    "s3fs>=2024.10.0",
    "psycopg2-binary>=2.9.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "awscli-local>=0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dagster_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
